[package]
name = "tun-tap-mac"
# Also don't forget to update the version in the html_root_url attribute in src/lib.rs
version = "0.1.2"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>","Haven Bao <baoyx007@gmail.com>"]
description = "TUN/TAP interface wrapper"
documentation = "https://docs.rs/tun-tap"
repository = "https://github.com/Baoyx007/tuntap-mac.git"
readme = "README.md"
keywords = ["tun", "tap", "network","mac"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/tuntap" }
maintenance = { status = "passively-maintained" }

[features]
default = ["tokio"]
tokio = ["futures", "libc", "mio", "tokio-core"]

[build-dependencies]
cc = "~1"

[dependencies]
futures = { version = "~0.1", optional = true }
libc = { version = "~0.2", optional = true }
mio = { version = "~0.6", optional = true }
tokio-core = { version = "~0.1", optional = true }

[dev-dependencies]
version-sync = "~0.5"
